--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -1,4 +1,5 @@
 <div class="rr-sidebar">
+    {{!-- bands listing pane --}}
     <ul class="rr-list">
         {{#each this.model as |band|}}
         <li>
@@ -11,7 +12,23 @@
         </li>
         {{/each}}
     </ul>
+    {{!-- add new band button --}}
+    {{#if this.isAddingBand}}
+    <Input @type="text" @value={{this.newBandName}} class="rr-input" placeholder="New band"
+        data-test-rr="new-band-input" />
+    <button type="button" class="rr-action-button" {{on "click" this.saveBand}}>
+        Add
+    </button>
+    <button class="rr-cancel-icon" {{on "click" this.toggleAddBand}}>
+        {{fa-icon "times"}}
+    </button>
+    {{else}}
+    <label {{on "click" this.toggleAddBand}}>
+        {{fa-icon "plus"}} <span class="ml1">Add new band</span>
+    </label>
+    {{/if}}
 </div>
+{{!-- band songs listing pane --}}
 <div class="rr-main-panel">
     {{outlet}}
 </div>
