--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -1,34 +1,36 @@
 <div class="rr-sidebar">
-    {{!-- bands listing pane --}}
+  {{!-- bands listing pane --}}
     <ul class="rr-list">
-        {{#each this.model as |band|}}
-        <li>
-            <LinkTo @route="bands.band.songs" @model={{band.slug}} class="rr-band-link">
+      {{#each this.model as |band|}}
+          <li>
+              <LinkTo @route="bands.band.songs" @model={{band.slug}} class="rr-band-link">
                 {{band.name}}
-                <span class="rr-pointer">
+                  <span class="rr-pointer">
                     {{fa-icon "angle-right"}}
-                </span>
-            </LinkTo>
-        </li>
-        {{/each}}
+                  </span>
+              </LinkTo>
+          </li>
+      {{/each}}
     </ul>
-    {{!-- add new band button --}}
-    {{#if this.isAddingBand}}
-    <Input @type="text" @value={{this.newBandName}} class="rr-input" placeholder="New band"
-        data-test-rr="new-band-input" />
-    <button type="button" class="rr-action-button" {{on "click" this.saveBand}}>
-        Add
-    </button>
-    <button class="rr-cancel-icon" {{on "click" this.toggleAddBand}}>
-        {{fa-icon "times"}}
-    </button>
-    {{else}}
-    <label {{on "click" this.toggleAddBand}}>
+  {{!-- add new band button --}}
+  {{#if this.isAddingBand}}
+      <form class="rr-inline-form" {{on "submit" this.saveBand}}>
+          <Input @type="text" @value={{this.newBandName}} class="rr-input" placeholder="New band"
+                 data-test-rr="new-band-input"/>
+          <button type="submit" disabled={{this.isAddButtonDisabled}} class="rr-action-button">
+              Add
+          </button>
+          <button class="rr-cancel-icon" {{on "click" this.toggleAddBand}}>
+            {{fa-icon "times"}}
+          </button>
+      </form>
+  {{else}}
+      <label {{on "click" this.toggleAddBand}}>
         {{fa-icon "plus"}} <span class="ml1">Add new band</span>
-    </label>
-    {{/if}}
+      </label>
+  {{/if}}
 </div>
 {{!-- band songs listing pane --}}
 <div class="rr-main-panel">
-    {{outlet}}
+  {{outlet}}
 </div>
