--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -8,3 +8,20 @@
     </li>
     {{/each}}
 </ul>
+{{!-- add new song button --}}
+{{#if this.isAddingSong}}
+    <form class="rr-inline-form" {{on "submit" this.saveSong}}>
+        <Input @type="text" @value={{this.newSongTitle}} class="rr-input" placeholder="New Song"
+               data-test-rr="new-band-input"/>
+        <button type="submit" disabled={{this.isAddSongButtonDisabled}} class="rr-action-button">
+            Add
+        </button>
+        <button class="rr-cancel-icon" {{on "click" this.toggleAddSong}}>
+          {{fa-icon "times"}}
+        </button>
+    </form>
+{{else}}
+    <label {{on "click" this.toggleAddSong}}>
+      {{fa-icon "plus"}} <span class="ml1">Add new song</span>
+    </label>
+{{/if}}
