dumb-downed star-rating component.

--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,13 +1,14 @@
 <ul class="rr-list">
-    {{#each this.model.songs as |song|}}
-    <li class="rr-list-item">
+  {{#each this.model.songs as |song|}}
+      <li class="rr-list-item">
         {{song.title}}
-       <StarRating class="fr" @rating="{{song.rating}}"/>
-    </li>
-    {{else}}
-    <li class="tc"> No {{this.model.name}} songs yet.
-    </li>
-    {{/each}}
+          <StarRating class="fr" @rating={{song.rating}} @onClick={{fn this.updateRating song}} />
+      </li>
+  {{else}}
+      <li class="tc">
+          No {{this.model.name}} songs yet.
+      </li>
+  {{/each}}
 </ul>
 {{!-- add new song button --}}
 {{#if this.isAddingSong}}
