--- a/app/templates/components/star-rating.hbs
+++ b/app/templates/components/star-rating.hbs
@@ -1,5 +1,5 @@
 {{#each this.stars as |star|}}
-    <button class="rating-star">
+    <button class="rating-star" {{on "click" (fn this.setRating star.rating)}}>
       {{#if star.isFull}}
         {{fa-icon "star"}}
       {{else}}
