--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,10 @@
 <div class="rr-container">
-	<div class="rr-page-header">
-		<h1 class="rr-app-title">Rock & Roll<small class="rr-subtitle"> with Ember.js</small></h1>
-	</div>
-	<div class="rr-main-content">
-		{{outlet}}
-	</div>
+    <div class="rr-page-header">
+        <LinkTo @route="index" class="rr-header-link">
+            <h1 class="rr-app-title">Rock & Roll<small class="rr-subtitle"> with Ember.js</small></h1>
+        </LinkTo>
+    </div>
+    <div class="rr-main-content">
+      {{outlet}}
+    </div>
 </div>
