--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -3,7 +3,7 @@
     <ul class="rr-list">
       {{#each this.model as |band|}}
           <li>
-              <LinkTo @route="bands.band" @model={{band.slug}} class="rr-band-link">
+              <LinkTo @route="bands.band" @model={{band.id}} class="rr-band-link">
                 {{band.name}}
                   <span class="rr-pointer">
                     {{fa-icon "angle-right"}}
