--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -2,8 +2,8 @@
   {{!-- bands listing pane --}}
     <ul class="rr-list">
       {{#each this.model as |band|}}
-          <li>
-              <LinkTo @route="bands.band" @model={{band.id}} class="rr-band-link">
+          <li class="rr-list-item" data-test-rr="band-list-item">
+              <LinkTo @route="bands.band" @model={{band.id}} class="rr-band-link" data-test-rr="band-link">
                 {{band.name}}
                   <span class="rr-pointer">
                     {{fa-icon "angle-right"}}
@@ -20,12 +20,12 @@
           <button type="submit" disabled={{this.isAddButtonDisabled}} class="rr-action-button">
               Add
           </button>
-          <button class="rr-cancel-icon" {{on "click" this.toggleAddBand}}>
+          <button class="rr-cancel-icon" {{on "click" this.toggleAddBand}} data-test-rr="new-band-button">
             {{fa-icon "times"}}
           </button>
       </form>
   {{else}}
-      <label {{on "click" this.toggleAddBand}}>
+      <label {{on "click" this.toggleAddBand}} data-test-rr="new-band-label">
         {{fa-icon "plus"}} <span class="ml1">Add new band</span>
       </label>
   {{/if}}
